fixed bugs - endless rounds bug - wrong turn sequence bug and first try of implementing effects (unfinished) - priest effect - guard effect